--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-src/build/
-Examples/Holiday/build/
-Examples/NativeCal/build/
-
+*~
+.DS_Store
+build
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcuserdatad
+xcuserdata/
+project.xcworkspace/
